# configx

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: app.rs  events.rs  main.rs
src/codegen/: autocmds.rs  init.rs  keymaps.rs  lsp_servers.rs  mod.rs  options.rs
src/codegen/plugins/: colorscheme.rs  completion.rs  explorer.rs  extras.rs  git.rs  lsp.rs  mod.rs  statusline.rs  telescope.rs  treesitter.rs
src/registry/: colorschemes.rs  mod.rs  plugins.rs
src/ui/: mod.rs  widgets.rs
src/wizard/: mod.rs  state.rs  steps.rs
